@@ -36,3 +36,4 @@
 2023-05-27T17:50:06.523Z |           1.13.0 | create-favicons
 2023-05-27T17:53:56.680Z |           1.13.1 | fix
 2023-05-29T10:15:31.419Z |           1.14.0 | create-favicon: init option
+2023-05-29T10:31:21.507Z |           1.15.0 | create-favicons: multi set
